# gbtest

./: .gitignore  .gitmodules  Bus.cpp  Bus.h  CMakeLists.txt  CMakePresets.json  DebugScreen.cpp  DebugScreen.h  GameBoy.cpp  GameBoy.h  LR35902.cpp  LR35902.h  README.md  main.cpp  vcpkg.json
.github/workflows/: cmake.yml
src/: Bus.h  CMakeLists.txt  DebugScreen.cpp  DebugScreen.h  GameBoy.cpp  GameBoy.h  LR35902.cpp  main.cpp  miniaudio.h
src/apu/: APU.cpp  APU.h  APURegisters.h
src/apu/channels/: APUChannel.cpp  APUChannel.h  APUChannel1.cpp  APUChannel1.h  APUChannel2.cpp  APUChannel2.h  APUChannel3.cpp  APUChannel3.h  APUChannel4.cpp  APUChannel4.h
src/apu/units/: APUUnit.h  AudioNoise.cpp  AudioNoise.h  AudioPulseWave.cpp  AudioPulseWave.h  AudioWave.cpp  AudioWave.h  FrameSequencer.cpp  FrameSequencer.h  FrequencySweep.cpp  FrequencySweep.h  LengthCounter.cpp  LengthCounter.h  PulseWavePatternDuty.h  Sweep.cpp  Sweep.h  VolumeEnvelope.cpp  VolumeEnvelope.h
src/cartridge/: BaseCartridge.cpp  BaseCartridge.h  CartridgeHeaderData.h  CartridgeMBC1.cpp  CartridgeMBC1.h  CartridgeMBC3.cpp  CartridgeMBC3.h  CartridgeMBC5.cpp  CartridgeMBC5.h  CartridgeNoMBC.cpp  CartridgeNoMBC.h
src/cartridge/datasource/: CartridgeDataSource.h  InMemoryCartridgeDataSource.cpp  InMemoryCartridgeDataSource.h
src/cartridge/peripherals/: CartridgeRTCPeripheral.cpp  CartridgeRTCPeripheral.h  CartridgeRTCPeripheralRegisters.cpp  CartridgeRTCPeripheralRegisters.h
src/cpu/: InterruptController.cpp  InterruptController.h  LR35902.cpp  LR35902.h  LR35902HaltState.h  LR35902Registers.h
src/cpu/interrupts/: InterruptController.cpp  InterruptController.h  InterruptType.h
src/exceptions/bus/: BusLockedAddressException.cpp  BusLockedAddressException.h  BusNoHandlerException.cpp  BusNoHandlerException.h
src/exceptions/cartridge/: UnsupportedCartridgeTypeException.cpp  UnsupportedCartridgeTypeException.h
src/exceptions/cpu/: StopInstrGlitchException.cpp  StopInstrGlitchException.h
src/exceptions/platform/: UnsupportedRevisionException.cpp  UnsupportedRevisionException.h
src/exceptions/ppu/: UnknownPPUModeException.cpp  UnknownPPUModeException.h
src/joypad/: Joypad.cpp  Joypad.h  JoypadState.h
src/memory/: Memory.cpp  Memory.h
src/platform/: CGBSpeedSwitchRegister.cpp  CGBSpeedSwitchRegister.h  GameBoy.cpp  GameBoy.h  GameBoyFrequencies.h
src/platform/bus/: Bus.cpp  Bus.h  BusProvider.h  BusRequestSource.h
src/platform/revision/: GameBoyRevision.cpp  GameBoyRevision.h  GameBoyRevisionType.h  GameBoyStartupRegisters.cpp  GameBoyStartupRegisters.h
src/ppu/: ColorUtils.cpp  ColorUtils.h  PPU.cpp  PPU.h  PPURegisters.h
src/ppu/fifo/: BackgroundFetcher.cpp  BackgroundFetcher.h  FIFOPixelData.h  Fetcher.cpp  Fetcher.h  FetcherState.h  PixelFIFO.cpp  PixelFIFO.h  SpriteFetcher.cpp  SpriteFetcher.h
src/ppu/framebuffer/: Framebuffer.cpp  Framebuffer.h
src/ppu/modes/: DrawingPPUMode.cpp  DrawingPPUMode.h  HBlankPPUMode.cpp  HBlankPPUMode.h  OAMSearchPPUMode.cpp  OAMSearchPPUMode.h  PPUMode.cpp  PPUMode.h  PPUModeManager.cpp  PPUModeManager.h  PPUModeType.h  VBlankPPUMode.cpp  VBlankPPUMode.h
src/ppu/oam/: OAM.cpp  OAM.h  OAMDMA.cpp  OAMDMA.h  OAMEntry.h  SpriteBuffer.cpp  SpriteBuffer.h
src/ppu/vram/: VRAM.cpp  VRAM.h  VRAMMapAttributes.cpp  VRAMMapAttributes.h  VRAMMapAttributesData.h  VRAMTileData.cpp  VRAMTileData.h  VRAMTileMaps.cpp  VRAMTileMaps.h
src/timer/: Divider.cpp  Divider.h  DividerRegisters.h  Timer.cpp  Timer.h  TimerRegisters.h
src/utils/: CircularBuffer.hpp  Tickable.h
